--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             </div>
             
             <div class="unit-toggle">
-                <button id="toggle-unit" class="active" data-unit="celsius">°C</button>
+                <button id="celsius-btn" class="active" data-unit="celsius">°C</button>
                 <span>/</span>
-                <button id="toggle-fahrenheit" data-unit="fahrenheit">°F</button>
+                <button id="fahrenheit-btn" data-unit="fahrenheit">°F</button>
             </div>
         </header>
 
@@ -98,6 +98,6 @@
         </footer>
     </div>
 
-    <script src="js/script.js"></script>
+    <script defer src="js/script.js"></script>
 </body>
 </html>
