--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Weather Forecast</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <meta name="description" content="A simple weather forecast application that shows current weather and 5-day forecast">
 </head>
 <body>
